# financial-dcf-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  assumption_agent.py  data_agent.py  planner.py  projection_agent.py  report_agent.py  sensitivity_agent.py
app/: main.py
core/: __init__.py  dcf.py  models.py  scenarios.py
tests/: __init__.py  test_dcf.py  test_pipeline.py  test_scenarios.py
