[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-dcf-demo"
version = "0.1.0"
description = "Minimal deterministic DCF demo with agent-like orchestration and Streamlit UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Financial DCF Demo", email = "info@example.com" }]
dependencies = [
    "streamlit>=1.34",
    "pandas>=2.1",
    "numpy>=1.26",
    "pydantic>=1.10,<2",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pytest>=7.4",
    "pandas-stubs>=2.2.0.240807",
    "types-PyYAML>=6.0.12.20240808",
]

[tool.setuptools]
packages = ["app", "core", "agents"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
plugins = []

[[tool.mypy.overrides]]
module = ["pandas", "streamlit", "matplotlib", "numpy", "numpy.*"]
ignore_missing_imports = true
